Trying to resolve Navbar menu not showing properly in iOS safari

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -106,16 +106,13 @@
   border: 1px solid #a993fe;
 }
 
-@media (max-width: 425px) {
-  .logo {
-    width: 10rem;
-    height: auto;
-  }
-}
-
 @media (max-width: 769px) {
   .menu-btn {
     display: block;
+    align-items: center;
+    justify-content: center;
+    line-height: 0;
+    cursor: pointer;
   }
 
   .nav-content ul {
